--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
 
 
-    <title>projeto Responsividade</title>
+    <title>projeto Responsividade - alteração </title>
 
 
 </head>
