1 alteração na branch develpo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
 
 
-    <title>projeto Responsividade - alteração - CSS </title>
+    <title>projeto brant Develope </title>
 
 
 </head>
